syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "marker.proto";

option csharp_namespace = "Mastodon.Grpc";

service MarkerApi {
  rpc Get (GetMarkerRequest) returns (Marker)
  {
	option (google.api.http) = {
      get: "/api/v1/markers"
    };
  }
  
  rpc Set (SetMarkerRequest) returns (Marker)
  {
	option (google.api.http) = {
      post: "/api/v1/markers"
      body: "*"
    };
  }
}

message SetMarkerRequest
{
    optional Marker home = 1;
    optional Marker notifications = 2;

    message Marker {
        string last_read_id = 1;
    }
}

message GetMarkerRequest
{
    repeated string timeline = 1 [json_name="timeline[]"];
}